--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["frlae <frlae@psb.ugent.be>"]
 
 [dependencies]
-tempfile = "2.1.5"
+rand = "0.3"
 
 [[bin]]
 name = "rmodules"
