* ditched bash in favor of rhai https://github.com/jonathandturner/rhai * rmodule now supports the commands: help load unload purge list available info * module info <modulename> gives detailed info about the module: a description, variables that are set, paths that are modified * added script to create a static build * when a module is loaded and a different version of that module is found, the module is switched

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "rmodules"
-version = "0.1.0"
-authors = ["frlae <frlae@psb.ugent.be>"]
+version = "0.2.0"
+authors = ["Frederik Delaere <frederik.delaere@ugent.be>"]
 
 [dependencies]
 rand = "0.3"
+lazy_static = "0.2"
+rhai = "0.4.0"
 
 [[bin]]
 name = "rmodules"
