--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ authors = ["Frederik Delaere <frederik.delaere@ugent.be>"]
 rand = "0.3"
 lazy_static = "0.2"
 rhai = "0.4.0"
+walkdir = "1"
+bincode = "0.6.1"
+rustc-serialize = "0.3.23"
 
 [[bin]]
 name = "rmodules"
