--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rmodules"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Frederik Delaere <frederik.delaere@ugent.be>"]
 
 [dependencies]
@@ -10,6 +10,8 @@ rhai = "0.4.0"
 walkdir = "1"
 bincode = "0.6.1"
 rustc-serialize = "0.3.23"
+users = "0.5.0"
+shellexpand = "1.0.0"
 
 [[bin]]
 name = "rmodules"
