--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rmodules"
+name = "rsmodules"
 version = "0.4.9"
 authors = ["Frederik Delaere <frederik.delaere@ugent.be>"]
 
@@ -15,5 +15,5 @@ shellexpand = "1.0.0"
 regex = "0.2.1"
 
 [[bin]]
-name = "rmodules"
+name = "rsmodules"
 path = "src/main.rs"
