--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ users = "0.5.0"
 shellexpand = "1.0.0"
 regex = "0.2.1"
 getopts = "0.2.14"
+is_executable = "0.1.0"
 
 [[bin]]
 name = "rsmodules"
