--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,3 +22,4 @@ test:cargo:
   script:
   - rustc --version && cargo --version      # Print version info for debugging
   - cargo test --verbose --jobs 1 --release # Don't parallelise to make errors more readable
+  - cargo build # make a build
