--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,20 @@
+
+variables:
+  CARGO_HOME: $CI_PROJECT_DIR/cargo
+
+test:cargo:
+  script:
+  - du -hs target
+  - du -hs cargo
+  - rustc --version && cargo --version      # Print version info for debugging
+  - cargo build # make a build
+  cache:
+    paths:
+      - target/
+      - cargo/
+
+
+
 # This file is a template, and might need editing before it works on your project.
 # Official language image. Look for the different tagged releases at:
 # https://hub.docker.com/r/library/rust/tags/
@@ -18,8 +35,8 @@
 #- apt-get install -yqq --no-install-recommends build-essential
 
 # Use cargo to test the project
-test:cargo:
-  script:
-  - rustc --version && cargo --version      # Print version info for debugging
+#test:cargo:
+#  script:
+#  - rustc --version && cargo --version      # Print version info for debugging
   # - cargo test --verbose --jobs 1 --release # Don't parallelise to make errors more readable
-  - cargo build # make a build
+#  - cargo build # make a build
