--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ test:cargo:
   script:
 #  - du -hs target
 #  - du -hs cargo
+  - env
   - rustc --version && cargo --version      # Print version info for debugging
   - cargo build # make a build
   cache:
