add support for subfunction addtocache. This speeds up creating new modules a lot as the modulepath folders don't need to be indexed anymore it just adds the module to the cache file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ dirs = "1.0"
 pbr = "1.0.1"
 natord = "1.0.9"
 chrono = "0.4.11"
+shell-words = "1.1.0"
 #smallvec = "0.6.10"
 
 [dependencies.mdcat]
