--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ shellexpand = "1.0.0"
 regex = "0.2.1"
 getopts = "0.2.19"
 is_executable = "0.1.0"
-gumdrop = "0.5.0"
-gumdrop_derive = "0.5.0"
+gumdrop = "0.8.1"
+gumdrop_derive = "0.8.1"
 ansi_term = "0.9"
 glob = "0.2"
 dirs = "1.0"
@@ -26,6 +26,7 @@ pbr = "1.0.1"
 natord = "1.0.9"
 chrono = "0.4.11"
 shell-words = "1.1.0"
+if-let-return = "0.1.1"
 #smallvec = "0.6.10"
 
 [dependencies.mdcat]
@@ -41,7 +42,7 @@ features = []
 [dependencies.syntect]
 version = "^3"
 default-features = false
-features = ["parsing", "assets", "dump-load"]
+features = ["parsing", "dump-load"]
 
 [[bin]]
 name = "rsmodules"
